Fix some missing spacers

--- a/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/components/amendment-create-wizard/amendment-create-wizard.component.scss
+++ b/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/components/amendment-create-wizard/amendment-create-wizard.component.scss
@@ -1,6 +1,6 @@
 .amendment-create-wizard-wrapper {
     .paragraph-scroll {
-        height: calc(100vh - 160px);
+        height: calc(100vh - 245px);
     }
 
     .paragraph-row {
